@@ -1,5 +1,6 @@
 Changes for 1.1alpha8:
 
+ - better alarms.php (Alexei)
  - new item type: active check (Alexei)
  - new mandatory parameter for zabbix_agentd.conf - Hostname (Alexei)
  - started development of active agent checks (Alexei)
